@@ -1,3 +1,8 @@
+2025-04-15  Dirk Eddelbuettel  <edd@debian.org>
+
+	* docker/ci-4.4/Dockerfile: Added based on r-base:4.4.3
+	* .github/workflows/ci.yaml (jobs): Add rcpp/ci-4.4 to matrix
+
 2025-03-31  Dirk Eddelbuettel  <edd@debian.org>
 
 	* DESCRIPTION (Version, Date): Roll micro version and date
